# ai-code-challenge

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  streamlit_app.py
.idx/: dev.nix  start-services.sh
ai_home_renovation/: FIX_REPORT.md  agent.py  tools.py
greeting_agent/: .env  README.md  __init__.py  agent.py  config.py  tools.py
thoughtful_ai_agent/: README.md  __init__.py  agent.py  config.py  tools.py
